--- a/PaymentSvc/pom.xml
+++ b/PaymentSvc/pom.xml
@@ -15,6 +15,8 @@
         <junit.version>5.8.1</junit.version>
         <jsonassert.version>1.5.0</jsonassert.version>
         <jersey.version>3.0.2</jersey.version>
+        <sonar.organization>sithumonline</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencyManagement>
