--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,27 +1,36 @@
-name: PAF CI
-
+name: Build
 on:
   push:
     branches:
       - main
   pull_request:
-    branches:
-      - main
-
+    types: [opened, synchronize, reopened]
 jobs:
-  test:
+  build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-java@v2
+      - uses: actions/checkout@v2
         with:
-          java-version: '17'
-          distribution: 'temurin'
-      - uses: pmd/pmd-github-action@v1
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
         with:
-          rulesets: 'ruleset.xml'
-      - uses: codecov/codecov-action@v2
+          java-version: 17
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./ruleset.xml
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=sithumonline_PAF
