--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,4 +33,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: for d in [0-9][0-9][0-9] do ( cd "$d" && mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=sithumonline_PAF ) done
+        # run: for d in [0-9][0-9][0-9] do ( cd "$d" && mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=sithumonline_PAF ) done
+        run: find . -type d -execdir mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=sithumonline_PAF "{}" ';' 
